--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <nav class="navbar">
     <h1 class="title">Potato&trade;</h1>
     <ul class="nav-links">
-      <li class="nav-item"></li>
-      <li class="nav-item"></li>
-      <li class="nav-item"></li>
-      <li class="nav-item"></li>
+      <li class="nav-item"><a href="#">About</a></li>
+      <li class="nav-item"><a href="#">Features</a></li>
+      <li class="nav-item"><a href="#">Nutrition</a></li>
+      <li class="nav-item"><a class="buy-button" href="#">Buy it Now</a></li>
     </ul>
   </nav>
 </body>
