Complete hero section

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
   <nav class="navbar">
     <h1 class="title">Potato&trade;</h1>
     <ul class="nav-links">
-      <li class="nav-item"><a href="#">About</a></li>
+      <li class="nav-item"><a href="#hero">About</a></li>
       <li class="nav-item"><a href="#">Features</a></li>
       <li class="nav-item"><a href="#">Nutrition</a></li>
       <li class="nav-item"><a class="buy-button" href="#">Buy it Now</a></li>
     </ul>
   </nav>
+  <section class="hero" id="hero">
+    <h2 class="headline">"Sweet, Nutritious and Delicous"</h2>
+    <p class="headline-sub">The key to happiness is hidden in the <span class="headline-sub__bold">
+        Potato&trade;</span>
+    </p>
+  </section>
 </body>
 
 </html>
