--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <li class="nav-item"><a href="#">Nutrition</a></li>
         <li class="nav-item"><a class="buy-button" href="#">Buy it Now</a></li>
       </ul>
+      <div class="mobile-menu" onclick="myFunction(this)">
+        <div class="mobile-bar-1"></div>
+        <div class="mobile-bar-2"></div>
+        <div class="mobile-bar-3"></div>
+      </div>
     </nav>
 
     <section class="hero" id="hero">
