Complete feature1 section

--- a/index.html
+++ b/index.html
@@ -27,14 +27,22 @@
       </div>
     </nav>
 
-    <section class="hero" id="hero">
-      <h2 class="headline">"Sweet, Nutritious and Delicous"</h2>
-      <p class="headline-sub">The key to happiness is hidden in the <span class="headline-sub__bold">
+    <section class="section hero" id="hero">
+      <h2 class="header hero-header">"Sweet, Nutritious and Delicous"</h2>
+      <p class="subheader header-sub">The key to happiness is hidden in the <span class="subheader--bold">
           Potato&trade;</span>
       </p>
     </section>
   </div>
-  <!-- <section class="feature">Hi</section> -->
+  <section class="section feature1">
+    <h2 class="header feature1-header">Different shapes and sizes</h2>
+    <p class="subheader feature1-sub"><span class="subheader--bold">
+        Potato&trade;</span> comes in many different unique shapes and sizes. </p>
+    <p class="subheader feature1-sub">Find the one that fits
+      your
+      personal preferences.
+    </p>
+  </section>
 </body>
 
 </html>
