Add id features in navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="title">Potato&trade;</h1>
       <ul class="nav-links">
         <li class="nav-item"><a href="#hero">About</a></li>
-        <li class="nav-item"><a href="#">Features</a></li>
+        <li class="nav-item"><a href="#features">Features</a></li>
         <li class="nav-item"><a href="#">Nutrition</a></li>
         <li class="nav-item"><a class="buy-button" href="#">Buy it Now</a></li>
       </ul>
@@ -34,7 +34,7 @@
       </p>
     </section>
   </div>
-  <section class="section feature1">
+  <section class="section feature1" id="features">
     <h2 class="header feature1-header">Different shapes and sizes</h2>
     <p class="subheader feature1-sub"><span class="subheader--bold">
         Potato&trade;</span> comes in many different unique shapes and sizes. </p>
