--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
       personal preferences.
     </p>
   </section>
+  <section class="section feature2" id="features">
+    <h2 class="header feature2-header">Is <span class="subheader--bold">
+        Potato&trade;</span> healthy? Yes it is! </h2>
+    <p class="subheader feature2-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
+      main energy source. </p>
+
+  </section>
 </body>
 
 </html>
