Style nutrition section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-links">
         <li class="nav-item"><a href="#hero">About</a></li>
         <li class="nav-item"><a href="#features">Features</a></li>
-        <li class="nav-item"><a href="#">Nutrition</a></li>
+        <li class="nav-item"><a href="#feature2">Nutrition</a></li>
         <li class="nav-item"><a class="buy-button" href="#">Buy it Now</a></li>
       </ul>
       <div class="mobile-menu">
@@ -43,13 +43,20 @@
       personal preferences.
     </p>
   </section>
-  <section class="section feature2" id="features">
-    <h2 class="header feature2-header">Is <span class="subheader--bold">
+  <section class="section feature2" id="feature2">
+    <h2 class="header feature2-header">Is <span class="header--bold">
         Potato&trade;</span> healthy? Yes it is! </h2>
     <p class="subheader feature2-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
       main energy source. </p>
 
-  </section>
+    <!-- </section>
+  <section class="section feature3" id="features">
+    <h2 class="header feature3-header">Is <span class="subheader--bold">
+        Potato&trade;</span> healthy? Yes it is! </h2>
+    <p class="subheader feature3-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
+      main energy source. </p>
+
+  </section> -->
 </body>
 
 </html>
