Complete transformable section

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     <p class="subheader feature2-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
       main energy source. </p>
 
-    <!-- </section>
+  </section>
   <section class="section feature3" id="features">
-    <h2 class="header feature3-header">Is <span class="subheader--bold">
-        Potato&trade;</span> healthy? Yes it is! </h2>
-    <p class="subheader feature3-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
-      main energy source. </p>
+    <h2 class="header feature3-header">Easily Transformable</h2>
+    <p class="subheader feature3-sub"> Because of its unique structure, <span
+        class="subheader--bold">Potato&trade;</span> is easily useable and transformable in any way you can think of.
+    </p>
 
-  </section> -->
+  </section>
 </body>
 
 </html>
