Add testimonials section

--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
       main energy source. </p>
 
   </section>
-  <section class="section feature3" id="features">
+  <section class="section feature3">
     <h2 class="header feature3-header">Easily Transformable</h2>
     <p class="subheader feature3-sub"> Because of its unique structure, <span
         class="subheader--bold">Potato&trade;</span> is easily useable and transformable in any way you can think of.
     </p>
 
+  </section>
+
+  <section class="section testimonials">
+    <h2 class="header testimonials-header">100% Customer satisfaction!</h2>
   </section>
 </body>
 
