--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
   <section class="section testimonials">
     <h2 class="header testimonials-header">100% Customer satisfaction!</h2>
   </section>
+
+  <section class="section purchase">
+    <h2 class="header purchase-header">Order one (or more) today!</h2>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-authorship">
+      <p>Since you came here to read this, have one for free!</p>
+      <p>Copyright &copy; 2019 Potato&trade; All rights reserved.</p>
+      <p>Created by Robert Luo.</p>
+    </div>
+    <ul class="footer-links">
+      <li class="footer-item"><a href="#">History</a></li>
+      <li class="footer-item"><a href="#">About</a></li>
+      <li class="footer-item"><a href="#">Contact Us</a></li>
+      <li class="footer-item"><a href="#">Free Potato</a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
