Style purchase section

--- a/index.html
+++ b/index.html
@@ -64,19 +64,58 @@
 
   <section class="section purchase">
     <h2 class="header purchase-header">Order one (or more) today!</h2>
+    <div class="purchase-options">
+
+      <ul class="purchase-links potato-lite">
+        <h3 class="purchase-sub"><span class="subheader--bold">Potato&trade;</span> Lite</h3>
+        <li class="purchase-item">Small and compact</li>
+        <li class="purchase-item">Highly portable</li>
+        <li class="purchase-item">Unaplogetically delicious</li>
+        <li class="purchase-item">Nutritious</li>
+        <div class="order-body">
+          <a class="buy-button buy-button--green">Order</a>
+          <p class="starting-price">starting at $9.99</p>
+        </div>
+      </ul>
+
+      <ul class="purchase-links potato-pro">
+        <h3 class="purchase-sub"><span class="subheader--bold">Potato&trade;</span> Pro</h3>
+        <li class="purchase-item">Highly portable</li>
+        <li class="purchase-item">Easily sliceable</li>
+        <li class="purchase-item">Unaplogetically delicious</li>
+        <li class="purchase-item">Very nutritious</li>
+        <div class="order-body">
+          <a class="buy-button buy-button--green">Order</a>
+          <p class="starting-price">starting at $19.99</p>
+        </div>
+      </ul>
+
+      <ul class="purchase-links potato-team">
+        <h3 class="purchase-sub"><span class="subheader--bold">Potato&trade;</span> Team</h3>
+        <li class="purchase-item">Ideal for bigger groups</li>
+        <li class="purchase-item">Easily sliceable</li>
+        <li class="purchase-item">Unaplogetically delicious</li>
+        <li class="purchase-item">Extremely nutritious</li>
+        <div class="order-body">
+          <a class="buy-button buy-button--green">Order</a>
+          <p class="starting-price">starting at $39.99</p>
+        </div>
+      </ul>
+    </div>
   </section>
 
   <footer class="footer">
     <div class="footer-authorship">
       <p>Since you came here to read this, have one for free!</p>
       <p>Copyright &copy; 2019 Potato&trade; All rights reserved.</p>
-      <p>Created by Robert Luo.</p>
+      <p>Created by <a class="footer-item footer-item__author" target="_blank" href="https://robertluo.dev">Robert
+          Luo.</a></p>
     </div>
     <ul class="footer-links">
-      <li class="footer-item"><a href="#">History</a></li>
-      <li class="footer-item"><a href="#">About</a></li>
-      <li class="footer-item"><a href="#">Contact Us</a></li>
-      <li class="footer-item"><a href="#">Free Potato</a></li>
+      <li class="footer-item"><a>History</a></li>
+      <li class="footer-item"><a>About</a></li>
+      <li class="footer-item"><a>Contact Us</a></li>
+      <li class="footer-item"><a>Free Potato</a></li>
     </ul>
   </footer>
 </body>
