Make purchase section responsive

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="purchase-options">
 
       <ul class="purchase-links potato-lite">
-        <h3 class="purchase-sub"><span class="subheader--bold">Potato&trade;</span> Lite</h3>
+        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Lite</h3>
         <li class="purchase-item">Small and compact</li>
         <li class="purchase-item">Highly portable</li>
         <li class="purchase-item">Unaplogetically delicious</li>
@@ -91,7 +91,7 @@
       </ul>
 
       <ul class="purchase-links potato-team">
-        <h3 class="purchase-sub"><span class="subheader--bold">Potato&trade;</span> Team</h3>
+        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Team</h3>
         <li class="purchase-item">Ideal for bigger groups</li>
         <li class="purchase-item">Easily sliceable</li>
         <li class="purchase-item">Unaplogetically delicious</li>
