Add potato chips image

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p class="subheader feature2-sub"> Because of its unique structure, <span
         class="subheader--bold">Potato&trade;</span> is easily useable and transformable in any way you can think of.
     </p>
-
+    <img class="responsive-image potato-chips-image" src="images/potato-chips-764.png" alt="A basket of potato chips.">
   </section>
 
   <section class="section testimonials">
