Add potato mix srcset

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       your
       personal preferences.
     </p>
+
+    <picture>
+      <source media="(max-width: 470px)" srcset="images/potato-mix_320.png">
+      <source media="(max-width: 767px)" srcset="images/potato-mix_631.png">
+      <source media="(max-width: 1023px)" srcset="images/potato-mix_872.png">
+      <source media="(min-width: 1024px)" srcset="images/potato-mix_1024.png">
+      <img class="potato-chips-image" src="images/potato-mix_1024.png"
+        alt="A picture of a variety of potatoes in different colors.">
+    </picture>
   </section>
   <section class="section feature2" id="feature2">
     <h2 class="header feature2-header">Is <span class="header--bold">
@@ -61,7 +70,7 @@
       <source media="(max-width: 767px)" srcset="images/potato-chips_509.png">
       <source media="(max-width: 1023px)" srcset="images/potato-chips_671.png">
       <source media="(min-width: 1024px)" srcset="images/potato-chips_764.png">
-      <img class="potato-chips-image" src="images/potato-chips_764.png">
+      <img class="potato-chips-image" src="images/potato-chips_764.png" alt="A basket of potato chips.">
     </picture>
 
   </section>
