--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         </div>
       </ul>
 
-      <ul class="purchase-links potato-team">
-        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Team</h3>
+      <ul class="purchase-links potato-elite">
+        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Elite</h3>
         <li class="purchase-item">Ideal for bigger groups</li>
         <li class="purchase-item">Easily sliceable</li>
         <li class="purchase-item">Unaplogetically delicious</li>
