Complete nutritional section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
     <p class="subheader feature2-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
       main energy source. </p>
 
+    <picture>
+      <source media="(max-width: 1023px)" srcset="images/single-potato_320.png">
+      <source media="(min-width: 1024px)" srcset="images/single-potato_633.png">
+      <img class="potato-chips-image" src="images/single-potato_633.png"
+        alt="A picture of a variety of potatoes in different colors.">
+    </picture>
+
+    <ul class="nutritional-facts">
+      <li class="nutritional-facts-item">110 <span class="nutritional-label">calories</span></li>
+      <li class="nutritional-facts-item">26g <span class="nutritional-label">carbohydrate</span></li>
+      <li class="nutritional-facts-item">3g <span class="nutritional-label">protein</span></li>
+      <li class="nutritional-facts-item">0g <span class="nutritional-label">fat</span></li>
+    </ul>
+
   </section>
   <section class="section feature3">
     <h2 class="header feature3-header">Easily Transformable</h2>
