Add hero potato image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       <p class="subheader header-sub">The key to happiness is hidden in the <span class="subheader--bold">
           Potato&trade;</span>
       </p>
+      <picture>
+        <source media="(max-width: 470px)" srcset="images/potato-hero_320.png">
+        <source media="(max-width: 767px)" srcset="images/potato-hero_628.png">
+        <source media="(max-width: 1023px)" srcset="images/potato-hero_853.png">
+        <source media="(min-width: 1024px)" srcset="images/potato-hero_1024.png">
+        <img class="image" src="images/potato-hero_1024.png" alt="A picture of 2 potatoes.">
+      </picture>
     </section>
   </div>
   <section class="section feature1" id="features">
@@ -48,8 +55,7 @@
       <source media="(max-width: 767px)" srcset="images/potato-mix_631.png">
       <source media="(max-width: 1023px)" srcset="images/potato-mix_872.png">
       <source media="(min-width: 1024px)" srcset="images/potato-mix_1024.png">
-      <img class="potato-chips-image" src="images/potato-mix_1024.png"
-        alt="A picture of a variety of potatoes in different colors.">
+      <img class="image" src="images/potato-mix_1024.png" alt="A picture of a variety of potatoes in different colors.">
     </picture>
   </section>
   <section class="section feature2" id="feature2">
@@ -61,8 +67,7 @@
     <picture>
       <source media="(max-width: 1023px)" srcset="images/single-potato_320.png">
       <source media="(min-width: 1024px)" srcset="images/single-potato_633.png">
-      <img class="potato-chips-image" src="images/single-potato_633.png"
-        alt="A picture of a variety of potatoes in different colors.">
+      <img class="image" src="images/single-potato_633.png" alt="A variety of potatoes in different colors.">
     </picture>
 
     <ul class="nutritional-facts">
@@ -84,13 +89,16 @@
       <source media="(max-width: 767px)" srcset="images/potato-chips_509.png">
       <source media="(max-width: 1023px)" srcset="images/potato-chips_671.png">
       <source media="(min-width: 1024px)" srcset="images/potato-chips_764.png">
-      <img class="potato-chips-image" src="images/potato-chips_764.png" alt="A basket of potato chips.">
+      <img class="image" src="images/potato-chips_764.png" alt="A basket of potato chips.">
     </picture>
 
   </section>
 
   <section class="section testimonials">
     <h2 class="header testimonials-header">100% Customer satisfaction!</h2>
+    <p class="subheader testimonials-sub">"I was skeptic at first, but when I tried the Potato for the first time, my
+      life has completely
+      changed! I'm a better person now. Everything is better with the Potato." <br>-Jane Doe, single mom</p>
   </section>
 
   <section class="section purchase">
