Make nav buttons functional

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <div class="nav-hero">
     <nav class="navbar">
-      <h1 class="title">Potato&trade;</h1>
+      <h1 class="title"></h1><a class="title" href="#">Potato&trade;</h1></a>
       <ul class="nav-links">
         <li class="nav-item"><a href="#hero">About</a></li>
         <li class="nav-item"><a href="#features">Features</a></li>
         <li class="nav-item"><a href="#feature2">Nutrition</a></li>
-        <li class="nav-item"><a class="buy-button" href="#">Buy it Now</a></li>
+        <li class="nav-item"><a class="buy-button" href="#purchase">Buy it Now</a></li>
       </ul>
       <div class="mobile-menu">
         <div class="mobile-bar-1"></div>
@@ -101,7 +101,7 @@
       changed! I'm a better person now. Everything is better with the Potato." <br>-Jane Doe, single mom</p>
   </section>
 
-  <section class="section purchase">
+  <section class="section purchase" id="purchase">
     <h2 class="header purchase-header">Order one (or more) today!</h2>
     <div class="purchase-options">
 
