Make subheaders nicer on smaller devices

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 
   <section class="section testimonials">
     <h2 class="header testimonials-header">100% Customer satisfaction!</h2>
-    <p class="subheader testimonials-sub">"I was skeptic at first, but when I tried the Potato for the first time, my
+    <p class="subheader feature2-sub testimonials-sub">"I was skeptic at first, but when I tried the Potato for the
+      first time, my
       life has completely
       changed! I'm a better person now. Everything is better with the Potato." <br>-Jane Doe, single mom</p>
   </section>
