--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Potato&trade;</title>
+  <link rel="shortcut icon" href="images/potato.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/minireset.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
