--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#ae957f">
+
   <title>Potato&trade;</title>
   <link rel="shortcut icon" href="images/potato.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/minireset.min.css">
