--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <picture>
       <source media="(max-width: 1023px)" srcset="images/single-potato_320.png">
       <source media="(min-width: 1024px)" srcset="images/single-potato_633.png">
-      <img class="image" src="images/single-potato_633.png" alt="A variety of potatoes in different colors.">
+      <img class="image" src="images/single-potato_633.png" alt="A single, texturized, juicy looking potato.">
     </picture>
 
     <ul class="nutritional-facts">
