Add left-right padding to images

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </ul>
 
       <ul class="purchase-links potato-pro">
-        <h3 class="purchase-sub"><span class="subheader--bold">Potato&trade;</span> Pro</h3>
+        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Pro</h3>
         <li class="purchase-item">Highly portable</li>
         <li class="purchase-item">Easily sliceable</li>
         <li class="purchase-item">Unaplogetically delicious</li>
