Add potato emoji

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="nav-hero">
     <nav class="navbar">
-      <h1 class="title"></h1><a class="title" href="#">Potato&trade;</h1></a>
+      <h1 class="title"></h1><a class="title" href="#">🥔 Potato&trade;</h1></a>
       <ul class="nav-links">
         <li class="nav-item"><a href="#hero">About</a></li>
         <li class="nav-item"><a href="#features">Features</a></li>
@@ -149,7 +149,7 @@
 
   <footer class="footer">
     <div class="footer-authorship">
-      <p>Since you came here to read this, have one for free!</p>
+      <p>Since you came here to read this, have one 🥔 for free!</p>
       <p>Copyright &copy; 2019 Potato&trade; All rights reserved.</p>
       <p>Created by <a class="footer-item footer-item__author" target="_blank" href="https://robertluo.dev">Robert
           Luo.</a></p>
