--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="nav-hero">
     <nav class="navbar">
-      <h1 class="title"></h1><a class="title" href="#">🥔 Potato&trade;</h1></a>
+      <a class="title" href="#">🥔 Potato&trade;</h1></a>
       <ul class="nav-links">
         <li class="nav-item"><a href="#hero">About</a></li>
         <li class="nav-item"><a href="#features">Features</a></li>
