Add nicer underline on hover for links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="nav-item"><a href="#hero">About</a></li>
         <li class="nav-item"><a href="#features">Features</a></li>
         <li class="nav-item"><a href="#feature2">Nutrition</a></li>
-        <li class="nav-item"><a class="buy-button" href="#purchase">Buy it Now</a></li>
+        <li class="nav-item"><span><a class="buy-button" href="#purchase">Buy it Now</a></span></li>
       </ul>
       <div class="mobile-menu">
         <div class="mobile-bar-1"></div>
