Change future2 id to nutrition

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul class="nav-links">
         <li class="nav-item"><a href="#hero">About</a></li>
         <li class="nav-item"><a href="#features">Features</a></li>
-        <li class="nav-item"><a href="#feature2">Nutrition</a></li>
+        <li class="nav-item"><a href="#nutrition">Nutrition</a></li>
         <li class="nav-item"><span><a class="buy-button" href="#purchase">Buy it Now</a></span></li>
       </ul>
       <div class="mobile-menu">
@@ -61,7 +61,7 @@
       <img class="image" src="images/potato-mix_1024.png" alt="A picture of a variety of potatoes in different colors.">
     </picture>
   </section>
-  <section class="section feature2" id="feature2">
+  <section class="section feature2" id="nutrition">
     <h2 class="header feature2-header">Is <span class="header--bold">
         Potato&trade;</span> healthy? Yes it is! </h2>
     <p class="subheader feature2-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
