--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-  <div class="nav-hero">
-    <nav class="navbar">
-      <a class="title" href="#">🥔 Potato&trade;</h1></a>
-      <ul class="nav-links">
-        <li class="nav-item"><a href="#hero">About</a></li>
-        <li class="nav-item"><a href="#features">Features</a></li>
-        <li class="nav-item"><a href="#nutrition">Nutrition</a></li>
-        <li class="nav-item"><span><a class="buy-button" href="#purchase">Buy it Now</a></span></li>
+  <div class="nav">
+    <nav class="nav__navbar">
+      <a class="nav__title" href="#">🥔 Potato&trade;</h1></a>
+      <ul class="nav__links">
+        <li class="nav__item"><a href="#hero">About</a></li>
+        <li class="nav__item"><a href="#features">Features</a></li>
+        <li class="nav__item"><a href="#nutrition">Nutrition</a></li>
+        <li class="nav__item"><span><a class="buy-button" href="#purchase">Buy it Now</a></span></li>
       </ul>
       <div class="mobile-menu">
         <div class="mobile-bar-1"></div>
@@ -31,8 +31,8 @@
     </nav>
 
     <section class="section hero" id="hero">
-      <h2 class="header hero-header">"Sweet, Nutritious and Delicous"</h2>
-      <p class="subheader header-sub">The key to happiness is hidden in the <span class="subheader--bold">
+      <h2 class="header hero__header">"Sweet, Nutritious and Delicous"</h2>
+      <p class="subheader header__subheader">The key to happiness is hidden in the <span class="subheader--bold">
           Potato&trade;</span>
       </p>
       <picture>
@@ -45,10 +45,10 @@
     </section>
   </div>
   <section class="section feature1" id="features">
-    <h2 class="header feature1-header">Different shapes and sizes</h2>
-    <p class="subheader feature1-sub"><span class="subheader--bold">
+    <h2 class="header feature1__header">Different shapes and sizes</h2>
+    <p class="subheader feature1__subheader"><span class="subheader--bold">
         Potato&trade;</span> comes in many different unique shapes and sizes. </p>
-    <p class="subheader feature1-sub">Find the one that fits
+    <p class="subheader feature1__subheader">Find the one that fits
       your
       personal preferences.
     </p>
@@ -62,9 +62,10 @@
     </picture>
   </section>
   <section class="section feature2" id="nutrition">
-    <h2 class="header feature2-header">Is <span class="header--bold">
+    <h2 class="header feature2__header">Is <span class="header--bold">
         Potato&trade;</span> healthy? Yes it is! </h2>
-    <p class="subheader feature2-sub"> The majority of carbohydrates in potatoes are complex carbohydrates, your body's
+    <p class="subheader feature2__subheader"> The majority of carbohydrates in potatoes are complex carbohydrates, your
+      body's
       main energy source. </p>
 
     <picture>
@@ -74,16 +75,16 @@
     </picture>
 
     <ul class="nutritional-facts">
-      <li class="nutritional-facts-item">110 <span class="nutritional-label">calories</span></li>
-      <li class="nutritional-facts-item">26g <span class="nutritional-label">carbohydrate</span></li>
-      <li class="nutritional-facts-item">3g <span class="nutritional-label">protein</span></li>
-      <li class="nutritional-facts-item">0g <span class="nutritional-label">fat</span></li>
+      <li class="nutritional-facts__item">110 <span class="nutritional-facts__label">calories</span></li>
+      <li class="nutritional-facts__item">26g <span class="nutritional-facts__label">carbohydrate</span></li>
+      <li class="nutritional-facts__item">3g <span class="nutritional-facts__label">protein</span></li>
+      <li class="nutritional-facts__item">0g <span class="nutritional-facts__label">fat</span></li>
     </ul>
 
   </section>
   <section class="section feature3">
-    <h2 class="header feature3-header">Easily Transformable</h2>
-    <p class="subheader feature2-sub"> Because of its unique structure, <span
+    <h2 class="header feature3__header">Easily Transformable</h2>
+    <p class="subheader feature2__subheader"> Because of its unique structure, <span
         class="subheader--bold">Potato&trade;</span> is easily useable and transformable in any way you can think of.
     </p>
 
@@ -98,67 +99,68 @@
   </section>
 
   <section class="section testimonials">
-    <h2 class="header testimonials-header">100% Customer satisfaction!</h2>
-    <p class="subheader feature2-sub testimonials-sub">"I was skeptic at first, but when I tried the Potato for the
+    <h2 class="header testimonials__header">100% Customer satisfaction!</h2>
+    <p class="subheader feature2__subheader testimonials__subheader">"I was skeptic at first, but when I tried the
+      Potato for the
       first time, my
       life has completely
       changed! I'm a better person now. Everything is better with the Potato." <br>-Jane Doe, single mom</p>
   </section>
 
   <section class="section purchase" id="purchase">
-    <h2 class="header purchase-header">Order one (or more) today!</h2>
-    <div class="purchase-options">
+    <h2 class="header purchase__header">Order one (or more) today!</h2>
+    <div class="purchase__options">
 
-      <ul class="purchase-links potato-lite">
-        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Lite</h3>
-        <li class="purchase-item">Small and compact</li>
-        <li class="purchase-item">Highly portable</li>
-        <li class="purchase-item">Unaplogetically delicious</li>
-        <li class="purchase-item">Nutritious</li>
-        <div class="order-body">
+      <ul class="purchase__links purchase__potato-lite">
+        <h3 class="subheader purchase__subheader"><span class="subheader--bold">Potato&trade;</span> Lite</h3>
+        <li class="purchase__item">Small and compact</li>
+        <li class="purchase__item">Highly portable</li>
+        <li class="purchase__item">Unaplogetically delicious</li>
+        <li class="purchase__item">Nutritious</li>
+        <div class="purchase__order-body">
           <a class="buy-button buy-button--green">Order</a>
-          <p class="starting-price">starting at $9.99</p>
+          <p class="purchase__starting-price">starting at $9.99</p>
         </div>
       </ul>
 
-      <ul class="purchase-links potato-pro">
-        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Pro</h3>
-        <li class="purchase-item">Highly portable</li>
-        <li class="purchase-item">Easily sliceable</li>
-        <li class="purchase-item">Unaplogetically delicious</li>
-        <li class="purchase-item">Very nutritious</li>
-        <div class="order-body">
+      <ul class="purchase__links purchase__potato-pro">
+        <h3 class="subheader purchase__subheader"><span class="subheader--bold">Potato&trade;</span> Pro</h3>
+        <li class="purchase__item">Highly portable</li>
+        <li class="purchase__item">Easily sliceable</li>
+        <li class="purchase__item">Unaplogetically delicious</li>
+        <li class="purchase__item">Very nutritious</li>
+        <div class="purchase__order-body">
           <a class="buy-button buy-button--green">Order</a>
-          <p class="starting-price">starting at $19.99</p>
+          <p class="purchase__starting-price">starting at $19.99</p>
         </div>
       </ul>
 
-      <ul class="purchase-links potato-elite">
-        <h3 class="subheader purchase-sub"><span class="subheader--bold">Potato&trade;</span> Elite</h3>
-        <li class="purchase-item">Ideal for bigger groups</li>
-        <li class="purchase-item">Easily sliceable</li>
-        <li class="purchase-item">Unaplogetically delicious</li>
-        <li class="purchase-item">Extremely nutritious</li>
-        <div class="order-body">
+      <ul class="purchase__links purchase__potato-elite">
+        <h3 class="subheader purchase__subheader"><span class="subheader--bold">Potato&trade;</span> Elite</h3>
+        <li class="purchase__item">Ideal for bigger groups</li>
+        <li class="purchase__item">Easily sliceable</li>
+        <li class="purchase__item">Unaplogetically delicious</li>
+        <li class="purchase__item">Extremely nutritious</li>
+        <div class="purchase__order-body">
           <a class="buy-button buy-button--green">Order</a>
-          <p class="starting-price">starting at $39.99</p>
+          <p class="purchase__starting-price">starting at $39.99</p>
         </div>
       </ul>
     </div>
   </section>
 
   <footer class="footer">
-    <div class="footer-authorship">
+    <div class="footer__authorship">
       <p>Since you came here to read this, have one 🥔 for free!</p>
       <p>Copyright &copy; 2019 Potato&trade; All rights reserved.</p>
-      <p>Created by <a class="footer-item footer-item__author" target="_blank" href="https://robertluo.dev">Robert
+      <p>Created by <a class="footer__item footer__item-author" target="_blank" href="https://robertluo.dev">Robert
           Luo.</a></p>
     </div>
-    <ul class="footer-links">
-      <li class="footer-item"><a>History</a></li>
-      <li class="footer-item"><a>About</a></li>
-      <li class="footer-item"><a>Contact Us</a></li>
-      <li class="footer-item"><a>Free Potato</a></li>
+    <ul class="footer__links">
+      <li class="footer__item"><a>History</a></li>
+      <li class="footer__item"><a>About</a></li>
+      <li class="footer__item"><a>Contact Us</a></li>
+      <li class="footer__item"><a>Free Potato</a></li>
     </ul>
   </footer>
 </body>
