Add toggle for hamburger menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="nav__item"><a href="#nutrition">Nutrition</a></li>
         <li class="nav__item"><span><a class="buy-button" href="#purchase">Buy it Now</a></span></li>
       </ul>
-      <div class="mobile-menu">
+      <div class="mobile-menu" onclick="toggleHamburgerMenu(this)">
         <div class="mobile-bar-1"></div>
         <div class="mobile-bar-2"></div>
         <div class="mobile-bar-3"></div>
@@ -163,6 +163,7 @@
       <li class="footer__item"><a>Free Potato</a></li>
     </ul>
   </footer>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
