Add nav mobile links

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       </div>
     </nav>
 
+    <ul class="nav__mobile-links">
+      <li class="nav__mobile-item"><a href="#hero">About</a></li>
+      <li class="nav__mobile-item"><a href="#features">Features</a></li>
+      <li class="nav__mobile-item"><a href="#nutrition">Nutrition</a></li>
+      <li class="nav__mobile-item"><a href="#purchase">Buy it Now</a></li>
+    </ul>
+
     <section class="section hero" id="hero">
       <h2 class="header hero__header">"Sweet, Nutritious and Delicous"</h2>
       <p class="subheader header__subheader">The key to happiness is hidden in the <span class="subheader--bold">
