Make hamburger menu toggle to show links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </nav>
 
-    <ul class="nav__mobile-links">
+    <ul id="navMobileLinks" class="nav__mobile-links">
       <li class=" nav__mobile-item"><a href="#hero">About</a></li>
       <li class="nav__mobile-item"><a href="#features">Features</a></li>
       <li class="nav__mobile-item"><a href="#nutrition">Nutrition</a></li>
