--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="images/potato.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/minireset.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/animations.css">
 </head>
 
 <body>
